# SimulationManager

./: .gitignore  AutoRunner.sln  SimulationManager.sln  go.mod  pyproject.toml
src/: job_runner.py
src/AutoRunner.Core/: SystemInfo.cs
src/AutoRunner/AutoRunner.Core/: Job.cs  JobProcess.cs  JobRunner.cs  SystemInfo.cs
src/AutoRunner/AutoRunner.Core/Interfaces/: IJobProcess.cs
tests/: test_job_runner.py
tests/AutoRunner/AutoRunner.Core.Tests/: AutoRunner.Core.Tests.csproj  JobRunnerTests.cs
tests/data/processes/unix/: long_running.sh  success.sh
tests/data/processes/windows/: long_running.bat  success.bat
